--- a/frontend-mentor/nft-preview-card-component/index.html
+++ b/frontend-mentor/nft-preview-card-component/index.html
@@ -8,30 +8,31 @@
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
-    <div class="card">
-      <div class="card__img">
-        <img src="images/image-equilibrium.jpg" alt="Equilibrium" class="card__img--nft"/>
-        <div class="card__img--overlay"><img src="images/icon-view.svg" alt="icon-view"/></div>
-      </div>
-      <h3 class="card--title">Equilibrium #3429</h3>
-      <p class="card--blueText">
-        Our Equilibrium collection promotes balance and calm.
-      </p>
-      <div class="card__infos">
-        <p class="card__infos--eth">
-          <img src="images/icon-ethereum.svg" alt="icon-ethereum" class="card__infos--imgs"/>
-          0.041 ETH
+    <main>
+      <div class="card">
+        <div class="card__img">
+          <img src="images/image-equilibrium.jpg" alt="Image of the Equilibrium NFT" class="card__img--nft"/>
+          <div class="card__img--overlay"><img src="images/icon-view.svg" alt="" aria-hidden="true"/></div>
+        </div>
+        <h1 class="card--title"><a>Equilibrium #3429</a></h1>
+        <p class="card--blueText">
+          Our Equilibrium collection promotes balance and calm.
         </p>
-        <p class="card__infos--timeleft">
-          <img src="images/icon-clock.svg" alt="icon-clock" class="card__infos--imgs"/>
-          3 days left
+        <div class="card__infos">
+          <p class="card__infos--eth">
+            <img src="images/icon-ethereum.svg" alt="" class="card__infos--imgs" aria-hidden="true"/>
+            0.041 ETH
+          </p>
+          <p class="card__infos--timeleft">
+            <img src="images/icon-clock.svg" alt="" class="card__infos--imgs" aria-hidden="true"/>
+            3 days left
+          </p>
+        </div>
+        <p class="card__credits--p">
+          <img src="images/image-avatar.png" alt="Avatar of the NFT creator" class="card__img--avatar"/>
+          Creation of <a class="card__credits--author">Jules Wyvern</a>
         </p>
       </div>
-      <hr />
-      <p class="card__credits--p">
-        <img src="images/image-avatar.png" alt="" class="card__img--avatar"/>
-        Creation of <span class="card__credits--span">Jules Wyvern</span>
-      </p>
-    </div>
+    </main>
   </body>
 </html>
