--- a/frontend-mentor/order-summary-component/index.html
+++ b/frontend-mentor/order-summary-component/index.html
@@ -3,39 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
     <link rel="stylesheet" href="styles/style.css" />
     <title>Frontend Mentor | Order summary card</title>
   </head>
   <body>
-    <div class="card">
-      <img src="images/illustration-hero.svg" alt="" class="card__img" />
-      <div class="head--padding">
-        <h2>Order Summary</h2>
-        <p>
-          You can now listen to millions of songs, audiobooks, and podcasts on
-          any device anywhere you like!
-        </p>
-      </div>
-      <div class="card__pricing">
-        <img
-          src="images/icon-music.svg"
-          alt="icon-music"
-          class="card__pricing--img"
-        />
-        <div class="text">
-          <h4>Annual Plan</h4>
-          <p>$59.99/year</p>
+    <main>
+      <div class="card">
+        <img src="images/illustration-hero.svg" alt="" class="card__img" aria-hidden="true"/>
+        <div class="head--padding">
+          <h1>Order Summary</h1>
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
         </div>
-        <p class="btn--change">Change</p>
+        <div class="card__pricing">
+          <img src="images/icon-music.svg" alt="" class="card__pricing--img" aria-hidden="true"/>
+          <div class="text">
+            <h4>Annual Plan</h4>
+            <p>$59.99/year</p>
+          </div>
+          <p class="btn--change">Change</p>
+        </div>
+        <p class="btn--payment">Proceed to Payment</p>
+        <p class="btn--cancel-order">Cancel Order</p>
       </div>
-      <p class="btn--payment">Proceed to Payment</p>
-      <p class="btn--cancel-order">Cancel Order</p>
-    </div>
+    </main>
   </body>
 </html>
