meet-landing-page: px to rem & tweaks

--- a/frontend-mentor/meet-landing-page/index.html
+++ b/frontend-mentor/meet-landing-page/index.html
@@ -32,13 +32,15 @@
         <img src="assets/desktop/image-man-texting.jpg" alt="" aria-hidden="true">
       </div>
 
-      <p class="text--overline">Built for modern use</p>
-      <h2>Smarter meetings, all<br>in one place</h2>
+      <div class="container--text">
+        <p class="text--overline">Built for modern use</p>
+        <h2>Smarter meetings, all in one place</h2>
 
-      <p class="text--gray">
-        Send messages, share files, show your screen, and record your <br> meetings — all in one 
-        workspace. Control who can join with <br> invite-only team access, data encryption, and data export.
-      </p>
+        <p class="text--gray">
+          Send messages, share files, show your screen, and record your meetings — all in one 
+          workspace. Control who can join with invite&#8209;only team access, data encryption, and data export.
+        </p>
+      </div>
     </main>
 
     <p class="section--number section--number--02">02</p>
