meet-landing-page: started to work on responsive

--- a/frontend-mentor/meet-landing-page/index.html
+++ b/frontend-mentor/meet-landing-page/index.html
@@ -8,18 +8,19 @@
   <title>Frontend Mentor | Meet landing page</title>
 </head>
 <body>
-  <div>
-    <img src="assets/logo.svg" alt="meet" class="logo">
 
     <header>
-      <img src="assets/desktop/image-hero-left.png" alt="" class="top--left" aria-hidden="true">
-      <div class="top--middle">
-        <h1>Group Chat for Everyone</h1>
-        <p class="text--gray">Meet makes it easy to connect with others face-to-face virtually <br> and collaborate across any device.</p>
-        <a class="btn btn--darkblue">Download <span>v1.3</span></a>
-        <a class="btn btn--purple">What is it?</a>
+      <img src="assets/logo.svg" alt="meet" class="logo">
+      <div class="header__content">
+        <img src="assets/desktop/image-hero-left.png" alt="" class="top--left" aria-hidden="true">
+        <div class="top--middle">
+          <h1>Group Chat <br> for Everyone</h1>
+          <p class="text--gray">Meet makes it easy to connect with others face-to-face virtually <br> and collaborate across any device.</p>
+          <a class="btn btn--darkblue">Download <span>v1.3</span></a>
+          <a class="btn btn--purple">What is it?</a>
+        </div>
+        <img src="assets/desktop/image-hero-right.png" alt="" class="top--right" aria-hidden="true">
       </div>
-      <img src="assets/desktop/image-hero-right.png" alt="" class="top--right" aria-hidden="true">
     </header>
 
     <p class="section--number section--number--01">01</p>
@@ -52,6 +53,5 @@
         <a class="btn btn--purple">Download <span>v1.3</span></a>
       </div>
     </footer>
-  </div>
 </body>
 </html>
