meet-landing-page (working but messy code)

--- a/frontend-mentor/meet-landing-page/index.html
+++ b/frontend-mentor/meet-landing-page/index.html
@@ -11,6 +11,7 @@
 
     <header>
       <img src="assets/logo.svg" alt="meet" class="logo">
+      <img src="assets/tablet/image-hero.png" alt="" class="hero__img--tablet">
       <div class="header__content">
         <img src="assets/desktop/image-hero-left.png" alt="" class="top--left" aria-hidden="true">
         <div class="top--middle">
