--- a/frontend-mentor/meet-landing-page/index.html
+++ b/frontend-mentor/meet-landing-page/index.html
@@ -8,10 +8,9 @@
   <title>Frontend Mentor | Meet landing page</title>
 </head>
 <body>
-
     <header>
       <img src="assets/logo.svg" alt="meet" class="logo">
-      <img src="assets/tablet/image-hero.png" alt="" class="hero__img--tablet">
+      <img src="assets/tablet/image-hero.png" alt="" class="hero__img--tablet" aria-hidden="true">
       <div class="header__content">
         <img src="assets/desktop/image-hero-left.png" alt="" class="top--left" aria-hidden="true">
         <div class="top--middle">
@@ -24,9 +23,8 @@
       </div>
     </header>
 
-    <p class="section--number section--number--01">01</p>
-
     <main>
+      <p class="section__number section__number--01">01</p>
       <div class="gallery">
         <img src="assets/desktop/image-woman-in-videocall.jpg" alt="" aria-hidden="true">
         <img src="assets/desktop/image-women-videochatting.jpg" alt="" aria-hidden="true">
@@ -43,9 +41,8 @@
           workspace. Control who can join with invite&#8209;only team access, data encryption, and data export.
         </p>
       </div>
+      <p class="section__number section__number--02">02</p>
     </main>
-
-    <p class="section--number section--number--02">02</p>
 
     <footer>
       <div class="footer__content">
