--- a/frontend-mentor/meet-landing-page/index.html
+++ b/frontend-mentor/meet-landing-page/index.html
@@ -11,45 +11,48 @@
     <header>
       <img src="assets/logo.svg" alt="meet" class="logo">
       <img src="assets/tablet/image-hero.png" alt="" class="hero__img--tablet" aria-hidden="true">
-      <div class="header__content">
-        <img src="assets/desktop/image-hero-left.png" alt="" class="top--left" aria-hidden="true">
-        <div class="top--middle">
+      <section>
+        <img src="assets/desktop/image-hero-left.png" alt="" class="header--left" aria-hidden="true">
+        <div class="header--middle">
           <h1>Group Chat <br> for Everyone</h1>
           <p class="text--gray">Meet makes it easy to connect with others face-to-face virtually <br> and collaborate across any device.</p>
           <a class="btn btn--darkblue">Download <span>v1.3</span></a>
           <a class="btn btn--purple">What is it?</a>
         </div>
-        <img src="assets/desktop/image-hero-right.png" alt="" class="top--right" aria-hidden="true">
-      </div>
+        <img src="assets/desktop/image-hero-right.png" alt="" class="header--right" aria-hidden="true">
+      </section>
     </header>
 
     <main>
       <p class="section__number section__number--01">01</p>
-      <div class="gallery">
+
+      <section class="main__gallery">
         <img src="assets/desktop/image-woman-in-videocall.jpg" alt="" aria-hidden="true">
         <img src="assets/desktop/image-women-videochatting.jpg" alt="" aria-hidden="true">
         <img src="assets/desktop/image-men-in-meeting.jpg" alt="" aria-hidden="true">
         <img src="assets/desktop/image-man-texting.jpg" alt="" aria-hidden="true">
-      </div>
+      </section>
 
-      <div class="container--text">
+      <section class="main__text">
         <p class="text--overline">Built for modern use</p>
+
         <h2>Smarter meetings, all in one place</h2>
 
         <p class="text--gray">
           Send messages, share files, show your screen, and record your meetings — all in one 
           workspace. Control who can join with invite&#8209;only team access, data encryption, and data export.
         </p>
-      </div>
+      </section>
+
       <p class="section__number section__number--02">02</p>
     </main>
 
     <footer>
-      <div class="footer__content">
+      <section>
         <h2>Experience more <br> together</h2>
         <p>Stay connected with reliable HD meetings <br> and unlimited one-on-one and group <br> video sessions.</p>
         <a class="btn btn--purple">Download <span>v1.3</span></a>
-      </div>
+      </section>
     </footer>
 </body>
 </html>
