social-proof-section: html titles fix

--- a/frontend-mentor/social-proof-section/index.html
+++ b/frontend-mentor/social-proof-section/index.html
@@ -18,7 +18,7 @@
           </p>
         </section>
 
-        <section class="stars">
+        <div class="stars">
           <div class="star star--left">
             <img src="assets/icon-star.svg" alt="" aria-hidden="true">
             <img src="assets/icon-star.svg" alt="" aria-hidden="true">
@@ -45,10 +45,10 @@
             <img src="assets/icon-star.svg" alt="" aria-hidden="true">
             <p>Rated 5 Stars in BestTech</p>
           </div>
-        </section>
+        </div>
       </div>
 
-      <section class="reviews">
+      <div class="reviews">
         <div class="review">
           <div class="author__infos">
             <img src="assets/image-colton.jpg" alt="Colton Smith">
@@ -91,7 +91,7 @@
             standard. Will definitely use them again and recommend them to everyone!"
           </p>
         </div>
-      </section>
+      </div>
     </main>
   </body>
 </html>
