--- a/frontend-mentor/article-preview-component/index.html
+++ b/frontend-mentor/article-preview-component/index.html
@@ -27,13 +27,14 @@
             <p class="article__author--name">Michelle Appleton</p>
             <p class="article--date">28 Jun 2020</p>
           </div>
-          <img src="assets/icon-share.svg" alt="Share" class="share--icon">
+          <svg class="share--icon" xmlns="http://www.w3.org/2000/svg" viewbox="0 -10 15 36"><path d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg>
 
           <div class="share--tab">
             <p>share</p>
             <img src="assets/icon-facebook.svg" alt="Share on Facebook">
             <img src="assets/icon-twitter.svg" alt="Share on Twitter">
             <img src="assets/icon-pinterest.svg" alt="Share on Pinterest">
+            <div class="share--tab-arrow"></div>
           </div>
         </div>
       </section>
