--- a/frontend-mentor/pod-request-access-landing-page/index.html
+++ b/frontend-mentor/pod-request-access-landing-page/index.html
@@ -13,8 +13,6 @@
   </header>
 
   <main>
-    <img src="assets/desktop/image-host.jpg" alt="" class="img--host-desktop" aria-hidden="true">
-    <img src="assets/tablet/image-host.jpg" alt="" class="img--host-tablet" aria-hidden="true">
     <h1>Publish your podcasts <br> <span>everywhere.</span></h1>
 
     <p>
@@ -22,26 +20,25 @@
       Apple <br> Podcasts, Google Podcasts, Pocket Casts and more!
     </p>
 
-    <section class="main__brands--mobile">
+    <div class="main__brands--mobile">
       <img src="assets/desktop/spotify.svg" alt="" aria-hidden="true">
       <img src="assets/desktop/apple-podcast.svg" alt="" aria-hidden="true">
       <img src="assets/desktop/google-podcasts.svg" alt="" aria-hidden="true">
       <img src="assets/desktop/pocket-casts.svg" alt="" aria-hidden="true">
-    </section>
+    </div>
 
-    <form action="#">
-      <input type="email" placeholder="Email adress" name="email" class="input--input" required>
-      <input type="submit" value="Request Access" class="input--submit" onclick="emailValidation(email)">
-      <p id="error-message" class="hidden">Oops! Please check your email</p>
+    <form onsubmit="return false">
+      <input type="email" placeholder="Email adress" name="email" class="input--input" id="email" required>
+      <input type="submit" value="Request Access" class="input--submit" onclick="emailValidation()">
+      <p id="error-message"></p>
     </form>
 
-    <section class="main__brands">
+    <div class="main__brands">
       <img src="assets/desktop/spotify.svg" alt="" aria-hidden="true">
       <img src="assets/desktop/apple-podcast.svg" alt="" aria-hidden="true">
       <img src="assets/desktop/google-podcasts.svg" alt="" aria-hidden="true">
       <img src="assets/desktop/pocket-casts.svg" alt="" aria-hidden="true">
-    </section>
-    <img src="assets/desktop/bg-pattern-dots.svg" alt="" class="img--dots" aria-hidden="true">
+    </div>
   </main>
   <script src="js/app.js"></script>
 </body>
