base-apparel-coming-soon

--- a/remake/m-restaurant/index.html
+++ b/remake/m-restaurant/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <nav>
-          <img src="assets/logo.png" alt="" class="logo">
+          <img src="assets/logo.png" alt="M Restaurant" class="logo">
         <ul>
           <li><a href="menu.html">menu</a></li>
           <li><a href="about.html">about</a></li>
@@ -28,15 +28,14 @@
         <p>14 paramore street, mornington</p>
       </div>
 
-      <img src="assets/arrow_down.png" alt="" aria-hidden="true" class="hero__down-arrow">
+      <a href="#main" class="hero__down-a"><img src="assets/arrow_down.png" alt="" aria-hidden="true" class="hero__down-arrow"></a>
     </header>
 
-    <main>
+    <main id="main">
       <img src="assets/badge.png" alt="" aria-hidden="true" class="logo--certified"/>
 
       <section>
-        <img src="assets/illustration06.jpeg" alt="" />
-        <!-- <div></div> -->
+        <img src="assets/illustration06.jpeg" alt="" aria-hidden="true"/>
         <div>
           <h2>inspired by the region</h2>
           <p>
@@ -54,28 +53,26 @@
             A collaboration of esteemed internation chefs Andrew, Celia Miller
             and our many local providers.
           </p>
-          <a href="#">learn more</a>
+          <a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer">learn more</a>
         </div>
-        <!-- <div></div> -->
-        <img src="assets/illustration11.jpeg" alt="" />
+        <img src="assets/illustration11.jpeg" alt="" aria-hidden="true"/>
       </section>
 
       <section>
-        <img src="assets/illustration01.jpeg" alt="" />
-        <!-- <div></div> -->
+        <img src="assets/illustration01.jpeg" alt="" aria-hidden="true"/>
         <div>
           <h2>the perfect venue</h2>
           <p>
             Make your enxt event one to remember with our elegant indoor-outdoor
             cocktail and dining spaces.
           </p>
-          <a href="#">learn more</a>
+          <a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer">learn more</a>
         </div>
       </section>
     </main>
 
     <footer>
-        <img src="assets/logo.png" alt="" class="logo">
+        <img src="assets/logo.png" alt="" class="logo" aria-hidden="true">
 
         <div class="footer__links">
             <ul>
@@ -101,15 +98,15 @@
             <ul>
                 <li class="footer__links--title">social</li>
                 <div class="footer__links--social">
-                    <li><a href="#"><img src="assets/social_instagram.png" alt=""/></a></li>
-                    <li><a href="#"><img src="assets/social_facebook.png" alt=""/></a></li>
-                    <li><a href="#"><img src="assets/social_tripadvisor.png" alt=""/></a></li>
-                    <li><a href="#"><img src="assets/social_zomato.png" alt=""/></a></li>
+                    <li><a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer"><img src="assets/social_instagram.png" alt="follow us on instagram"/></a></li>
+                    <li><a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer"><img src="assets/social_facebook.png" alt="follow us on facebook"/></a></li>
+                    <li><a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer"><img src="assets/social_tripadvisor.png" alt="follow us on tripadvisor"/></a></li>
+                    <li><a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer"><img src="assets/social_zomato.png" alt="follow us on zomato"/></a></li>
                 </div>
             </ul>
         </div>
 
-      <p class="footer__copyright">© Copyright. Powered by Jérémy :)</p>
+      <p class="footer__copyright">© Copyright 2022. Powered by Jérémy Cusin-Mermet :)</p>
     </footer>
   </body>
 </html>
