m-restaurant: responsive homepage

--- a/remake/m-restaurant/index.html
+++ b/remake/m-restaurant/index.html
@@ -11,13 +11,13 @@
   <body>
     <header>
       <nav>
-          <img src="assets/logo.png" alt="M Restaurant" class="logo">
+        <a href="/"><img src="assets/logo.png" alt="M Restaurant" class="logo"></a>
         <ul>
-          <li><a href="menu.html">menu</a></li>
-          <li><a href="about.html">about</a></li>
-          <li><a href="functions.html">functions</a></li>
-          <li><a href="news.html">news</a></li>
-          <li><a href="reservations.html">reservations</a></li>
+          <li><a href="menu.html" class="link link--navbar">menu</a></li>
+          <li><a href="about.html" class="link link--navbar">about</a></li>
+          <li><a href="functions.html" class="link link--navbar">functions</a></li>
+          <li><a href="news.html" class="link link--navbar">news</a></li>
+          <li><a href="reservations.html" class="link link--navbar">reservations</a></li>
           <li>ph: (03) 6638 2918</li>
         </ul>
       </nav>
@@ -63,7 +63,7 @@
         <div>
           <h2>the perfect venue</h2>
           <p>
-            Make your enxt event one to remember with our elegant indoor-outdoor
+            Make your next event one to remember with our elegant indoor-outdoor
             cocktail and dining spaces.
           </p>
           <a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer">learn more</a>
@@ -72,6 +72,7 @@
     </main>
 
     <footer>
+      <div class="footer__content">
         <img src="assets/logo.png" alt="" class="logo" aria-hidden="true">
 
         <div class="footer__links">
@@ -106,7 +107,8 @@
             </ul>
         </div>
 
-      <p class="footer__copyright">© Copyright 2022. Powered by Jérémy Cusin-Mermet :)</p>
+        <p class="footer__copyright">© Copyright 2022. Powered by Jérémy Cusin-Mermet :)</p>
+      </div>
     </footer>
   </body>
 </html>
