--- a/remake/m-restaurant/index.html
+++ b/remake/m-restaurant/index.html
@@ -13,18 +13,18 @@
       <nav>
         <a href="/"><img src="assets/logo.png" alt="M Restaurant" class="logo"></a>
         <ul>
-          <li><a href="menu.html" class="link link--navbar">menu</a></li>
-          <li><a href="about.html" class="link link--navbar">about</a></li>
-          <li><a href="functions.html" class="link link--navbar">functions</a></li>
-          <li><a href="news.html" class="link link--navbar">news</a></li>
-          <li><a href="reservations.html" class="link link--navbar">reservations</a></li>
-          <li>ph: (03) 6638 2918</li>
+          <li><a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer" class="link link--navbar">Menu</a></li>
+          <li><a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer" class="link link--navbar">About</a></li>
+          <li><a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer" class="link link--navbar">Functions</a></li>
+          <li><a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer" class="link link--navbar">News</a></li>
+          <li><a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer" class="link link--navbar">Reservations</a></li>
+          <li><a href="tel:+03-6638-2918" class="link link--navbar">PH: (03) 6638 2918</a></li>
         </ul>
       </nav>
 
       <div class="hero__text">
         <h1>Celebrating the bounty of the sea</h1>
-        <p class="hero__spacer">------------</p>
+        <hr>
         <p>14 paramore street, mornington</p>
       </div>
 
@@ -42,7 +42,7 @@
             Rich in heritage and abundant in local produce, Miller is a
             gathering place celebrating Mornington's finest.
           </p>
-          <a href="menu.html">view menu</a>
+          <a href="https://github.com/jrmydix" target="_blank" rel="noopener noreferrer">view menu</a>
         </div>
       </section>
 
@@ -76,17 +76,17 @@
         <img src="assets/logo.png" alt="" class="logo" aria-hidden="true">
 
         <div class="footer__links">
-            <ul>
-                <li class="footer__links--title">location</li>
-                <li>14 Paramore Street</li>
-                <li>Mornington Peninsula</li>
-                <li>Victoria 3552</li>
-            </ul>
+            <address>
+                <p class="footer__links--title">location</p>
+                <p>14 Paramore Street</p>
+                <p>Mornington Peninsula</p>
+                <p>Victoria 3552</p>
+            </address>
 
             <ul>
                 <li class="footer__links--title">contact</li>
-                <li>P: (03) 9283 4726</li>
-                <li>E: <a href="mailto:enquiries@mill.co">enquiries@mill.co</a></li>
+                <li>P: <a href="tel:+03-9283-4726">(03) 9283 4726</a></li>
+                <li>E: <a href="mailto:jeremy.cusinmermet@pm.me">enquiries@mill.co</a></li>
             </ul>
 
             <ul>
