--- a/frontend-mentor/nft-preview-card-component/index.html
+++ b/frontend-mentor/nft-preview-card-component/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
-    <link rel="stylesheet" href="styles/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
     <main>
       <div class="card">
         <div class="card__img">
-          <img src="images/image-equilibrium.jpg" alt="Image of the Equilibrium NFT" class="card__img--nft"/>
+          <img src="images/image-equilibrium.jpg" alt="Equilibrium NFT" class="card__img--nft"/>
           <div class="card__img--overlay"><img src="images/icon-view.svg" alt="" aria-hidden="true"/></div>
         </div>
-        <h1 class="card--title"><a>Equilibrium #3429</a></h1>
-        <p class="card--blueText">
+        <h1><a>Equilibrium #3429</a></h1>
+        <p>
           Our Equilibrium collection promotes balance and calm.
         </p>
         <div class="card__infos">
@@ -23,14 +23,14 @@
             <img src="images/icon-ethereum.svg" alt="" class="card__infos--imgs" aria-hidden="true"/>
             0.041 ETH
           </p>
-          <p class="card__infos--timeleft">
+          <p class="card__infos--time">
             <img src="images/icon-clock.svg" alt="" class="card__infos--imgs" aria-hidden="true"/>
             3 days left
           </p>
         </div>
         <p class="card__credits--p">
-          <img src="images/image-avatar.png" alt="Avatar of the NFT creator" class="card__img--avatar"/>
-          Creation of <a class="card__credits--author">Jules Wyvern</a>
+          <img src="images/image-avatar.png" alt="Jules Wyvern" class="card__img--avatar"/>
+          Creation of <a>Jules Wyvern</a>
         </p>
       </div>
     </main>
