--- a/frontend-mentor/typemaster-pre-launch-landing-page/index.html
+++ b/frontend-mentor/typemaster-pre-launch-landing-page/index.html
@@ -17,34 +17,50 @@
       <a href="#" class="btn btn--gray">Pre-order now</a>
     </div>
 
-    <h1>Typemaster keyboard</h1>
+    <div class="header__grid">
+      <div class="header__grid--left">
+        <h1>Typemaster keyboard</h1>
 
-    <p>
-      Improve your productivity and gaming without breaking the bank. Upgrade to a high quality
-      mechanical typing experience.
-    </p>
+        <p>
+          Improve your productivity and gaming without breaking the bank. Upgrade to a high quality
+          mechanical typing experience.
+        </p>
 
-    <div class="header__release-date">
+        <div class="header__release-date">
 
-      <a href="#" class="btn btn--orange">Pre-order now</a>
+          <a href="#" class="btn btn--orange">Pre-order now</a>
 
-      <p class="header__release-date--p">Release on 5/27</p>
+          <p class="header__release-date--p">Release on 5/27</p>
+        </div>
+      </div>
+
+      <div class="header__grid--right">
+        <img src="assets/mobile/image-keyboard.jpg" alt="" aria-hidden="true" class="header__img">
+        <img src="assets/tablet/image-keyboard.jpg" alt="" aria-hidden="true" class="header__img--tablet">
+        <img src="assets/desktop/image-keyboard.jpg" alt="" aria-hidden="true" class="header__img--desktop">
+      </div>
     </div>
-
-    <img src="assets/mobile/image-keyboard.jpg" alt="" aria-hidden="true" class="header__img">
   </header>
 
   <main>
     <div class="main__imgs">
-      <img src="assets/mobile/image-phone-and-keyboard.jpg" alt="" aria-hidden="true">
-      <img src="assets/mobile/image-glass-and-keyboard.jpg" alt="" aria-hidden="true">
+      <img src="assets/mobile/image-phone-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--mobile">
+      <img src="assets/mobile/image-glass-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--mobile">
+
+      <img src="assets/tablet/image-phone-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--tablet">
+      <img src="assets/tablet/image-glass-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--tablet">
+
+      <img src="assets/desktop/image-phone-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--desktop">
+      <img src="assets/desktop/image-glass-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--desktop">
     </div>
 
-    <h2>Mechanical wireless keyboard</h2>
-    <p>
-      The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety
-      of switches and keycaps, along with reliable wireless connectivity.
-    </p>
+    <div class="main__title">
+      <h2>Mechanical wireless keyboard</h2>
+      <p>
+        The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety
+        of switches and keycaps, along with reliable wireless connectivity.
+      </p>
+    </div>
 
     <ul>
       <li>
@@ -86,7 +102,7 @@
   </main>
 
   <footer>
-    <p><span>Typemaster 2021 | </span>All Rights Reserved</p>
+    <p><span>Typemaster 2021</span> | All Rights Reserved</p>
   </footer>
 </body>
 
