--- a/frontend-mentor/typemaster-pre-launch-landing-page/index.html
+++ b/frontend-mentor/typemaster-pre-launch-landing-page/index.html
@@ -21,7 +21,7 @@
       <div class="header__grid--left">
         <h1>Typemaster keyboard</h1>
 
-        <p>
+        <p class="header__grid--subtitle">
           Improve your productivity and gaming without breaking the bank. Upgrade to a high quality
           mechanical typing experience.
         </p>
@@ -38,6 +38,8 @@
         <img src="assets/mobile/image-keyboard.jpg" alt="" aria-hidden="true" class="header__img">
         <img src="assets/tablet/image-keyboard.jpg" alt="" aria-hidden="true" class="header__img--tablet">
         <img src="assets/desktop/image-keyboard.jpg" alt="" aria-hidden="true" class="header__img--desktop">
+
+        <img src="assets/shared/pattern-square.svg" alt="" aria-hidden="true" class="header__img--desktop-square">
       </div>
     </div>
   </header>
@@ -49,17 +51,21 @@
 
       <img src="assets/tablet/image-phone-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--tablet">
       <img src="assets/tablet/image-glass-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--tablet">
-
-      <img src="assets/desktop/image-phone-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--desktop">
-      <img src="assets/desktop/image-glass-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--desktop">
     </div>
 
     <div class="main__title">
-      <h2>Mechanical wireless keyboard</h2>
-      <p>
-        The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety
-        of switches and keycaps, along with reliable wireless connectivity.
-      </p>
+      <img src="assets/desktop/image-phone-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--desktop main__imgs--desktop-relative">
+      <img src="assets/desktop/image-glass-and-keyboard.jpg" alt="" aria-hidden="true" class="main__imgs--desktop">
+
+      <img src="assets/shared/pattern-square.svg" alt="" aria-hidden="true" class="main__imgs--desktop-square">
+
+      <div class="main__title--text">
+        <h2>Mechanical wireless keyboard</h2>
+        <p>
+          The Typemaster keyboard boasts top-notch build and practical design. It offers a wide variety
+          of switches and keycaps, along with reliable wireless connectivity.
+        </p>
+      </div>
     </div>
 
     <ul>
@@ -102,7 +108,7 @@
   </main>
 
   <footer>
-    <p><span>Typemaster 2021</span> | All Rights Reserved</p>
+    <p><span>Typemaster 2022</span> | All Rights Reserved</p>
   </footer>
 </body>
 
