tip-calculator-app

--- a/frontend-mentor/tip-calculator-app/index.html
+++ b/frontend-mentor/tip-calculator-app/index.html
@@ -41,7 +41,7 @@
             class="btn btn--tip btn--custom">
         </div>
 
-        <label for="people-count">Number of people</label>
+        <label class="label--people-count" for="people-count">Number of people <span>Can't be zero</span></label>
         <div class="input">
           <svg xmlns="http://www.w3.org/2000/svg" width="13" height="16">
             <path fill="#9EBBBD"
@@ -55,12 +55,12 @@
       <div class="right">
         <div class="tip__results">
           <p class="tip__results--text">Tip Amount <span>/ person</span></p>
-          <p class="tip__results--number">$0.00</p>
+          <p class="tip__results--number">$<span id="tip-amount">0.00</span></p>
         </div>
 
         <div class="tip__results">
           <p class="tip__results--text">Total <span>/ person</span></p>
-          <p class="tip__results--number">$0.00</p>
+          <p class="tip__results--number">$<span id="tip-total">0.00</span></p>
         </div>
 
         <button class="btn btn--reset">Reset</button>
