--- a/frontend-mentor/calculator-app/index.html
+++ b/frontend-mentor/calculator-app/index.html
@@ -37,7 +37,7 @@
         <button>7</button>
         <button>8</button>
         <button>9</button>
-        <button class="action" data-action="clear">del</button>
+        <button class="action" data-action="del">del</button>
 
         <button>4</button>
         <button>5</button>
