github-user-search-app: fixes
added error when no results found
commented js code
cleaner js code
fixed some css margin mistakes

--- a/frontend-mentor/github-user-search-app/index.html
+++ b/frontend-mentor/github-user-search-app/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
-  <title>Frontend Mentor | GitHub user search app</title>
+  <title>GitHub user search app</title>
 </head>
 
 <body>
@@ -28,6 +28,8 @@
           fill="#0079ff" />
       </svg>
       <input class="input--text" type="text" name="username" id="username" placeholder="Search GitHub username">
+
+      <p class="form__error">No results</p>
 
       <input class="input--submit" type="submit" value="Search">
     </form>
