chat-app-css-illustration

--- a/frontend-mentor/chat-app-css-illustration/index.html
+++ b/frontend-mentor/chat-app-css-illustration/index.html
@@ -18,15 +18,17 @@
         <div class="left">
           <div class="arrow-back"></div>
 
-          <img src="./assets/avatar.jpg" alt="Samuel Green">
+          <img src="./assets/back.svg" alt="Back to all conversations">
+
+          <img src="./assets/avatar.jpg" alt="Samuel Green" class="user-picture">
 
           <div class="user">
             <p>Samuel Green</p>
             <p>Available to Walk</p>
           </div>
-        </div>
 
-        <div class="settings"></div>
+          <img src="./assets/settings.svg" alt="Settings" class="settings">
+        </div>
       </div>
 
       <div class="phone--content">
@@ -62,23 +64,41 @@
           </div>
 
           <div class="chat-bubble bubble-choice">
-            <p>30 minute walk</p>
-            <p>$29</p>
+            <img src="./assets/choice.svg" alt="Chose a 30 minute walk">
+
+            <div class="text">
+              <p>30 minute walk</p>
+              <p>$29</p>
+            </div>
           </div>
 
           <div class="chat-bubble bubble-choice">
-            <p>1 hour walk</p>
-            <p>$49</p>
+            <img src="./assets/choice.svg" alt="Chose a 1 hour walk">
+
+            <div class="text">
+              <p>1 hour walk</p>
+              <p>$49</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="chat-answer">
+          <p>Type a message…</p>
+
+          <div class="chat-send">
+            <img src="./assets/send.svg" alt="Send message">
           </div>
         </div>
       </div>
     </div>
 
-    <h1>Simple booking</h1>
+    <div class="main__right">
+      <h1>Simple booking</h1>
 
-    <p class="subtitle">Stay in touch with our dog walkers through the chat interface. This makes it easy to
-      discuss arrangements and make bookings. Once the walk has been completed you can rate
-      your walker and book again all through the chat.</p>
+      <p class="subtitle">Stay in touch with our dog walkers through the chat interface. This makes it easy to
+        discuss arrangements and make bookings. Once the walk has been completed you can rate
+        your walker and book again all through the chat.</p>
+    </div>
   </main>
 </body>
 
